--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "water7oo/Portfolio"] 
   path = water7oo/Portfolio
-  url = https://github.com/water7oo/Portfolio.git
+  url = git@github.com:water7oo/Portfolio.git
