--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "water7oo/Portfolio"] 
   path = water7oo/Portfolio
   url = git@github.com:water7oo/Portfolio.git
+[submodule "Portfolio"]
+	path = Portfolio
+	url = https://github.com/water7oo/Portfolio
